# samokat_autoreg

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
aboba/: main(old).py  main.py
