[project]
name = "aboba"
version = "0.1.0"
description = "boobs"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
requires-python = ">=3.13"
dependencies = ["pandas",
    "openpyxl",
    "selenium",
    "undetected-chromedriver",
    "helper20sms",
    "setuptools",
    "psycopg2-binary".
    "sqlalchemy",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
